Continue DatabaseMetaData call implementation.